bin/testsuite/tests/compiler/src/errors/compiler42.swg
#global testerror "Err0232"
namespace toto
{
    var a: s32
    var a: s32
}
